--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,22 @@ body,
   animation:  spin 30s linear infinite;
 }
 
+@keyframes spinOne{
+  0%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(90px);
+  }
+  100%{
+    transform: translateX(0);
+  }
+}
+
+.spinOne{
+  animation:  spinOne 7s linear infinite;
+}
+
 .swiper-pagination-bullet-active {
   opacity: var(--swiper-pagination-bullet-opacity, 1);
   background: #f0f0f0 !important;
